src/objects/Payment__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>TEXT(Project__r.Account_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>add_payment_info</fullName>
                </value>
                <value>
                    <fullName>add_to_cart</fullName>
                </value>
                <value>
                    <fullName>add_to_wishlist</fullName>
                </value>
                <value>
                    <fullName>app_custom_event</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_achievement_unlocked</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_activate_app</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_add_payment_info</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_add_to_cart</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_add_to_wishlist</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_complete_registration</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_content_view</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_initiated_checkout</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_level_achieved</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_purchase</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_rate</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_search</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_spent_credits</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.fb_mobile_tutorial_completion</fullName>
                </value>
                <value>
                    <fullName>app_custom_event.other</fullName>
                </value>
                <value>
                    <fullName>app_engagement</fullName>
                </value>
                <value>
                    <fullName>app_install</fullName>
                </value>
                <value>
                    <fullName>app_story</fullName>
                </value>
                <value>
                    <fullName>app_use</fullName>
                </value>
                <value>
                    <fullName>checkin</fullName>
                </value>
                <value>
                    <fullName>click</fullName>
                </value>
                <value>
                    <fullName>comment</fullName>
                </value>
                <value>
                    <fullName>complete_registration</fullName>
                </value>
                <value>
                    <fullName>credit_spent</fullName>
                </value>
                <value>
                    <fullName>games.plays</fullName>
                </value>
                <value>
                    <fullName>initiate_checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Gross_Profit_New__c</fullName>
        <label>Actual Gross Profit New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Rebate__c</fullName>
        <label>Actual Rebate</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue__c</fullName>
        <formula>IF(Payment__r.Synced_with_Xero__c || !ISPICKVAL( Payment__r.XeroStatus__c,&quot;&quot;),
   InvoiceAmount__c,
Expected_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdWordsSpend__c</fullName>
        <label>Media Spend</label>
        <summarizedField>Project_Media_Spend__c.Amount__c</summarizedField>
        <summaryForeignKey>Project_Media_Spend__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AgeText__c</fullName>
        <formula>IF( 
   OR(LEFT(StrikeId__c,2)=&apos;FB&apos;,
      LEFT(StrikeId__c,2)=&apos;IG&apos;,
      LEFT(StrikeId__c,2)=&apos;SN&apos;,
      LEFT(StrikeId__c,2)=&apos;TW&apos;),
       IF(Age_Min__c&gt;0, TEXT(Age_Min__c), NULL) &amp; &apos; - &apos; &amp;
       IF(Age_Max__c&gt;0,
         IF(Age_Max__c&gt;54 &amp;&amp; LEFT(StrikeId__c,2)=&apos;TW&apos;,&apos;54+&apos;,
            IF(Age_Max__c&gt;=35 &amp;&amp; LEFT(StrikeId__c,2)=&apos;SN&apos;,&apos;35+&apos;,
            IF(Age_Max__c&gt;65, &apos;65+&apos;,
            TEXT(Age_Max__c)))),
       NULL),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AgeText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Max__c</fullName>
        <label>Age Max</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Min__c</fullName>
        <label>Age Min</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Platform_Prefix__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>13-17</fullName>
                </value>
                <value>
                    <fullName>18-20</fullName>
                </value>
                <value>
                    <fullName>18-24</fullName>
                </value>
                <value>
                    <fullName>21-24</fullName>
                </value>
                <value>
                    <fullName>25-34</fullName>
                </value>
                <value>
                    <fullName>35+</fullName>
                </value>
                <value>
                    <fullName>35-44</fullName>
                </value>
                <value>
                    <fullName>35-54</fullName>
                </value>
                <value>
                    <fullName>45-54</fullName>
                </value>
                <value>
                    <fullName>55+</fullName>
                </value>
                <value>
                    <fullName>55-64</fullName>
                </value>
                <value>
                    <fullName>65+</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AmountDelivered__c</fullName>
        <label>Delivered</label>
        <summarizedField>Project_Media_Spend__c.Delivered__c</summarizedField>
        <summaryForeignKey>Project_Media_Spend__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ApplyStrikeIdSuffix__c</fullName>
        <formula>OR(IsOverlapping__c, Start_Date__c &gt;= DATE(2017,05,01))</formula>
        <label>Apply Strike Id Suffix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingCondition__c</fullName>
        <formula>Payment__r.Billing_Conditions__c</formula>
        <label>Billing Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Lift_Study__c</fullName>
        <formula>TEXT(OpportunityPlatform__r.Brand_Lift_Study__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Lift Study</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BypassValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTA_Overlay_Text__c</fullName>
        <label>CTA Overlay</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C_ActualRebate__c</fullName>
        <formula>Project__r.Actual_Rebate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Actual Rebate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C_ClientSpend__c</fullName>
        <formula>Project__r.Client_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C_DiscountTerms__c</fullName>
        <formula>Project__r.Discount_Terms__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Discount Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <formula>IF( 
AND( Start_Date__c &lt;= TODAY(),TODAY() &lt;= End_Date__c) ,&quot;In Progress&quot;, 
IF(TODAY() &gt; End_Date__c,&quot;Finished&quot;, 
&quot;Planned&quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Spend__c</fullName>
        <label>Client Spend</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Companion_Banner__c</fullName>
        <label>Companion Banner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform_Prefix__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractId__c</fullName>
        <formula>Payment__r.Project__c</formula>
        <label>Contract Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostStructure__c</fullName>
        <label>Cost Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>CPAC</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPE</fullName>
                </value>
                <value>
                    <fullName>CPER</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>CPI</fullName>
                </value>
                <value>
                    <fullName>CPL</fullName>
                </value>
                <value>
                    <fullName>CPLC</fullName>
                </value>
                <value>
                    <fullName>CPM</fullName>
                </value>
                <value>
                    <fullName>CPPL</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>CPSU</fullName>
                </value>
                <value>
                    <fullName>CPV</fullName>
                </value>
                <value>
                    <fullName>CPVC</fullName>
                </value>
                <value>
                    <fullName>CPDPV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Crossing_Months__c</fullName>
        <formula>Month(Start_Date__c) != Month(End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Crossing Months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Running__c</fullName>
        <formula>End_Date__c - Start_Date__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Running</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>IF(Project__r.Discount_Terms__c &amp;&amp; !Payment__r.Discount_Violation__c &amp;&amp; Payment__r.Paid__c,
   Client_Spend__c * Payment__r.Rebate__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Profit_New__c</fullName>
        <label>Expected Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Gross_Profit__c</fullName>
        <formula>IF (ISPICKVAL(Project__r.BillingCondition__r.Rebate_Type__c,&quot;Instant&quot;),
  (Client_Spend__c - Media_Order__c) * (1 - Project__r.BillingCondition__r.Rebate_Rate__c),
  (Client_Spend__c - Media_Order__c) - (Client_Spend__c * Project__r.BillingCondition__r.Rebate_Rate__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Gross Profit OLD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <formula>IF(Account_Type__c = &quot;Client&quot;, 
   Client_Spend__c - Media_Order__c, 
Client_Spend__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facebook_Page__c</fullName>
        <label>Facebook Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Platform_Prefix__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InvoiceAmount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IsOverlapping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Overlapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI__c</fullName>
        <label>KPI</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Margin_Type__c</fullName>
        <label>Margin Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% of Budget</fullName>
                    <default>true</default>
                    <label>% of Budget</label>
                </value>
                <value>
                    <fullName>% of Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MaxMediaSpendDate__c</fullName>
        <label>Max Media Spend Date</label>
        <summarizedField>Project_Media_Spend__c.Date__c</summarizedField>
        <summaryForeignKey>Project_Media_Spend__c.Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Media_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Media Buyer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>equals</operation>
                <value>Internal Users</value>
            </filterItems>
            <filterItems>
                <field>Contact.Title</field>
                <operation>contains</operation>
                <value>Media Buyer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>MediaBuyers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Order__c</fullName>
        <formula>IF(ISPICKVAL(Margin_Type__c,&apos;% of Media&apos;),
   Client_Spend__c / (1+Margin__c),
   Client_Spend__c * (1-Margin__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Media Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Media_Spend_Counter__c</fullName>
        <label>Media Spend Counter</label>
        <summaryForeignKey>Project_Media_Spend__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinMediaSpendDate__c</fullName>
        <label>Min Media Spend Date</label>
        <summarizedField>Project_Media_Spend__c.Date__c</summarizedField>
        <summaryForeignKey>Project_Media_Spend__c.Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Objectives__c</fullName>
        <label>Objectives</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Platform_Prefix__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>App Installs</fullName>
                </value>
                <value>
                    <fullName>Awareness</fullName>
                </value>
                <value>
                    <fullName>Boost Engagement</fullName>
                </value>
                <value>
                    <fullName>Brand Awareness</fullName>
                </value>
                <value>
                    <fullName>Conversions</fullName>
                </value>
                <value>
                    <fullName>Drive Traffic to App</fullName>
                </value>
                <value>
                    <fullName>Drive Traffic to Website</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Event Responses</fullName>
                </value>
                <value>
                    <fullName>Lead Generation</fullName>
                </value>
                <value>
                    <fullName>Local Awareness</fullName>
                </value>
                <value>
                    <fullName>Offer Claims</fullName>
                </value>
                <value>
                    <fullName>Page Likes</fullName>
                </value>
                <value>
                    <fullName>Post Engagements</fullName>
                </value>
                <value>
                    <fullName>Product Catalogue Sales</fullName>
                </value>
                <value>
                    <fullName>Reach</fullName>
                </value>
                <value>
                    <fullName>Store Visits</fullName>
                </value>
                <value>
                    <fullName>Traffic</fullName>
                </value>
                <value>
                    <fullName>Tweet Engagements</fullName>
                </value>
                <value>
                    <fullName>Video Views</fullName>
                </value>
                <value>
                    <fullName>Website Conversions</fullName>
                </value>
                <value>
                    <fullName>Website Traffic</fullName>
                </value>
                <value>
                    <fullName>Website Visits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityPlatform__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Platform</label>
        <referenceTo>OpportunityPlatform__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Ad_Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Ad Placement</label>
        <referenceTo>OpportunityAdPlacement__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P_AdServingCosts__c</fullName>
        <formula>Payment__r.Ad_Serving_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Ad Serving Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P_Checked__c</fullName>
        <formula>Payment__r.Checked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P_ClientSpend__c</fullName>
        <formula>Payment__r.Client_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>P_SyncedWithXero__c</fullName>
        <formula>Payment__r.Synced_with_Xero__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Synced With Xero</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentChecked__c</fullName>
        <formula>Payment__r.Checked__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <formula>TEXT(Project__r.Payment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>50/50</fullName>
                </value>
                <value>
                    <fullName>100% Upfront</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>Sub_Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pixel_Tracking__c</fullName>
        <label>Tags</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Platform_Prefix__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlatformId__c</fullName>
        <formula>OpportunityPlatform__r.Platform__c</formula>
        <label>Platform Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlatformPrefix__c</fullName>
        <formula>OpportunityPlatform__r.Platform__r.Prefix__c</formula>
        <label>Platform Prefix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Prefix__c</fullName>
        <label>Platform Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AV</fullName>
                </value>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>DT</fullName>
                </value>
                <value>
                    <fullName>FB</fullName>
                </value>
                <value>
                    <fullName>IG</fullName>
                </value>
                <value>
                    <fullName>LN</fullName>
                </value>
                <value>
                    <fullName>PN</fullName>
                </value>
                <value>
                    <fullName>SN</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>TW</fullName>
                </value>
                <value>
                    <fullName>TT</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_Type_Formula__c</fullName>
        <formula>TEXT(OpportunityPlatform__r.Platform__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <label>Platform Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <formula>IF(ISBLANK(OpportunityPlatform__c), Payment__r.Project__r.Project_ID__c, OpportunityPlatform__r.Platform__r.Prefix__c + Payment__r.Project__r.Project_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strike ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <formula>if(UnitCost__c&lt;&gt;0, if(ISPICKVAL(CostStructure__c, &apos;CPM&apos;), Client_Spend__c/UnitCost__c * 1000, Client_Spend__c/UnitCost__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Rate__c</fullName>
        <formula>Project__r.BillingCondition__r.Rebate_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebate Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ShouldSyncWithMM__c</fullName>
        <formula>AND(NOT(ISNULL(Payment__r.Project__r.Sync_with_MM__c)), 
NOT(Payment__r.Project__r.PerformMMSync__c))</formula>
        <label>Should Sync With MM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StrikeIdFormula__c</fullName>
        <formula>IF(ApplyStrikeIdSuffix__c, StrikeId__c, ProjectID__c)</formula>
        <label>Strike Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StrikeId__c</fullName>
        <label>Project ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strike_Final_Margin__c</fullName>
        <formula>IF(BEGINS(Project__r.BillingCondition__r.Name,&quot;Rebate&quot;), Project__r.BillingCondition__r.Default_Margin__c - Project__r.BillingCondition__r.Rebate_Rate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strike Final Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Strike_Profit__c</fullName>
        <formula>Project__r.BillingCondition__r.Strike_Profit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strike Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SuggestedSpend__c</fullName>
        <formula>IF (UnitCost__c != 0 &amp;&amp; AmountDelivered__c != 0,
  IF(
    (IF(TEXT(CostStructure__c) == &apos;CPM&apos;,
      AdWordsSpend__c / AmountDelivered__c * 1000,
      AdWordsSpend__c / AmountDelivered__c)
    ) * IF(ISPICKVAL(Margin_Type__c,&quot;% of Media&quot;), (1+Margin__c), 1/(1-Margin__c)) &gt;= UnitCost__c,
    IF(TEXT(CostStructure__c) == &apos;CPM&apos;,
      AmountDelivered__c * UnitCost__c / 1000,
      AmountDelivered__c * UnitCost__c
    ),
    AdWordsSpend__c * IF(ISPICKVAL(Margin_Type__c,&quot;% of Media&quot;), (1+Margin__c), 1/(1-Margin__c))
  ),
  AdWordsSpend__c * IF(ISPICKVAL(Margin_Type__c,&quot;% of Media&quot;), (1+Margin__c), 1/(1-Margin__c))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suggested Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitCost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VariableUnitCost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Variable Unit Cost</label>
        <type>Checkbox</type>
    </fields>
    <label>Project</label>
    <nameField>
        <label>Project Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AgeMinMinimum13</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(Age_Min__c) &amp;&amp;
OR(PlatformPrefix__c=&quot;FB&quot;,
PlatformPrefix__c=&quot;IG&quot;,
PlatformPrefix__c=&quot;SN&quot;) &amp;&amp;
Age_Min__c&lt;13</errorConditionFormula>
        <errorDisplayField>Age_Min__c</errorDisplayField>
        <errorMessage>Minimum Age is 13</errorMessage>
    </validationRules>
</CustomObject>